SLLS-203 Adopt SLOOP in VSCode
* SLLS-203 Adopt SLOOP in VSCode
* SLLS-224 fix handling of hotspot events
* SLVSCODE-710 Fix encoding of "illegal" characters when handling relative paths from server data (#331)
* SLLS-216 improve backend initialization; register all open workspace folders at once